fix boards index spacing

--- a/app/assets/stylesheets/styles/board_index.scss
+++ b/app/assets/stylesheets/styles/board_index.scss
@@ -34,11 +34,11 @@
 .board {
   vertical-align: top;
   display: inline-block;
-  width: 23%;
+  width: 23.5%;
   height: 4.8rem;
   padding: 0.4rem 0.6rem;
   background-color: #0067A3;
-  margin-right: 1.2%;
+  margin-right: 1%;
   margin-bottom: 0.8rem;
   border-radius: 3px;
   background-size: cover;
